--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.6.1",
     "@supabase/supabase-js": "^2.57.4",
     "lucide-react": "^0.542.0",
     "react": "^19.1.2",
